--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@popperjs/core": "^2.11.8",
     "axios": "^1.7.3",
     "bootstrap": "^5.3.3",
+    "razorpay": "^2.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.0",
     "remove": "^0.1.5"
   },
