--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "@react-oauth/google": "^0.12.1",
     "axios": "^1.7.3",
     "bootstrap": "^5.3.3",
     "firebase": "^10.13.1",
@@ -20,6 +21,7 @@
     "react-google-recaptcha": "^3.1.0",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.0",
+    "react-toastify": "^10.0.5",
     "remove": "^0.1.5"
   },
   "devDependencies": {
